[MISC] Hiding button in non WebRTC browsers

--- a/views/landing.html
+++ b/views/landing.html
@@ -19,7 +19,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    
+
     <script>(function(h,o,t,j,a,r){
     h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
     h._hjSettings={hjid:126921,hjsv:5};
@@ -27,7 +27,7 @@
     r=o.createElement('script');r.async=1;
     r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
     a.appendChild(r);})(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');</script>
-    
+
   </head>
   <body>
 
@@ -110,7 +110,7 @@
               <a href="/widget/demo" class="btn btn-info">Create a sample call button</a>
             </div>
             <hr>
-            <div id="voxButton_575b3d7e89005411004db935" data-button_id="575b3d7e89005411004db935" data-text="click2vox Us Now" data-redirect_url="https://voxbone.com" data-did="883510080408" data-dial_pad="true" data-context="" data-send_digits="" data-caller_id="Click2Vox" data-incompatible_browser_configuration="link_button_to_a_page" data-show_frame="false" data-use_default_button_css="false"
+            <div id="voxButton_575b3d7e89005411004db935" data-button_id="575b3d7e89005411004db935" data-text="click2vox Us Now" data-redirect_url="https://voxbone.com" data-did="883510080408" data-dial_pad="true" data-context="" data-send_digits="" data-caller_id="Click2Vox" data-incompatible_browser_configuration="hide_widget" data-show_frame="false" data-use_default_button_css="false"
             data-div_css_class_name=""
             data-button_css_class_name="btn btn-purple"
             class="voxButton">
