--- a/public/stylesheets/less/vxb-button.less
+++ b/public/stylesheets/less/vxb-button.less
@@ -25,6 +25,7 @@
   text-shadow:0 -1px #07619e;
   font-family: 'Open Sans', sans-serif;
   font-weight: bold;
+  max-width: 90%;
 }
 .btn-style-a {
   -moz-border-radius:4px;
@@ -56,7 +57,9 @@
   text-decoration:none;
   touch-action:manipulation;
   vertical-align:middle;
-  white-space:nowrap;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   span {
     -moz-border-radius:4px;
     -webkit-border-radius:4px;
@@ -67,7 +70,9 @@
     padding: 10px 12px 12px;
     text-overflow:ellipsis;
     vertical-align:top;
-    white-space:nowrap;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   &:hover {
     background:-moz-linear-gradient(@color2,@color0);
@@ -107,7 +112,9 @@
   text-decoration:none;
   touch-action:manipulation;
   vertical-align:middle;
-  white-space:nowrap;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   span {
     -moz-border-radius:4px;
     -webkit-border-radius:4px;
@@ -118,7 +125,9 @@
     padding:10px 12px 12px;
     text-overflow:ellipsis;
     vertical-align:top;
-    white-space:nowrap;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   &:hover {
     background:-moz-linear-gradient(@color3,@color1);
@@ -201,7 +210,9 @@
     text-decoration:none;
     touch-action:manipulation;
     vertical-align:middle;
-    white-space:nowrap;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     span {
       -moz-border-radius:4px;
       -webkit-border-radius:4px;
@@ -212,7 +223,9 @@
       padding:10px 12px 12px;
       text-overflow:ellipsis;
       vertical-align:top;
-      white-space:nowrap;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     &:hover {
       background:-moz-linear-gradient(@color2,@color0);
@@ -258,7 +271,9 @@
     text-decoration:none;
     touch-action:manipulation;
     vertical-align:middle;
-    white-space:nowrap;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     span {
       -moz-border-radius:4px;
       -webkit-border-radius:4px;
@@ -269,7 +284,9 @@
       padding:10px 12px 12px;
       text-overflow:ellipsis;
       vertical-align:top;
-      white-space:nowrap;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     &:hover {
       background:-moz-linear-gradient(@color3,@color1);
