[#268] Ability to edit sip uris (#298)
* [#268] Ability to edit sip uris

* [#268] Fixing small glitches

--- a/public/stylesheets/less/custom.less
+++ b/public/stylesheets/less/custom.less
@@ -109,3 +109,11 @@ pre {
     padding: 20px !important;
   }
 }
+
+.editSIPModal {
+  top: 120px;
+
+  .modal-body {
+    min-height: 120px !important;
+  }
+}
