[MISC] Adding hi-res favicon (#304)

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,7 +11,7 @@ html(lang='en')
     title= title
 
     link(rel="apple-touch-icon" href="")
-    link(rel="shortcut icon" type="image/x-icon" href="/images/favicon.png")
+    link(rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico")
 
     link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", rel="stylesheet")
     link(href="/stylesheets/root.css", rel="stylesheet")
