--- a/views/stats.jade
+++ b/views/stats.jade
@@ -7,7 +7,7 @@ html(lang='en', ng-app="voxboneApp")
     title= title
 
     link(rel="apple-touch-icon" href="")
-    link(rel="shortcut icon" type="image/x-icon" href="/images/favicon.png")
+    link(rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico")
 
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js")
 
