--- a/views/voxbone_widget_iframe.jade
+++ b/views/voxbone_widget_iframe.jade
@@ -7,7 +7,7 @@ html(lang='en', ng-app="voxboneApp")
     title= title
 
     link(rel="apple-touch-icon" href="")
-    link(rel="shortcut icon" type="image/x-icon" href="/images/favicon.png")
+    link(rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico")
 
     link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css", rel="stylesheet")
     link(href="/stylesheets/root.css", rel="stylesheet")
