--- a/views/widget/demo.jade
+++ b/views/widget/demo.jade
@@ -34,7 +34,7 @@ block content
 
   .div#control
 
-  .main.createButton(class=showWizard ? 'wizard' : '')
+  .main.createButton(class=currentUser.showWizard() ? 'wizard' : '')
     .header
       .container
         .row
