--- a/views/widget/edit.jade
+++ b/views/widget/edit.jade
@@ -69,7 +69,7 @@ block content
 
                     select.form-control(
                       ng-model="widget.sip_uri" name="sip_uri" required
-                      ng-options="sip for sip in #{JSON.stringify(currentUser.getSipURIs().concat('Add a new SIP URI'))}")
+                      ng-options="sip for sip in #{JSON.stringify(currentUser.getSipURIsWithNewSipUri())}")
                       option(value="") Select a SIP URI
 
                     .error-label(ng-cloak ng-show="widget_form.sip_uri.$touched")
