--- a/views/account/widgets.jade
+++ b/views/account/widgets.jade
@@ -48,27 +48,29 @@ block content
             .col-xs-12
               .group-header
                 h4
-                  a(data-toggle="collapse" href="##{group.widgets[0]._id}")
-                    #[i.glyphicon.glyphicon-chevron-down] #[span #{group._id}]
+                  a(data-toggle="collapse" href="##{group.uuid}" class="#{(group.widgets.length === 0) ? 'collapsed': ''}")
+                    i(class="glyphicon glyphicon-chevron-#{(group.widgets.length === 0) ? 'right': 'down'}")
+                    span #{group._id}
                 .group-header-actions
                   a(href="javascript:;" ng-click='editSIPURI("#{group._id}")') Edit
 
-              .sipCollapse.collapse.in(id="#{group.widgets[0]._id}")
-                table.table
-                  thead
-                    tr
-                      td(width="25%") Configuration Name
-                      td.text-center(width="55%") Button Preview
-                      td.text-right Actions
-                  tbody
-                    - each widget in group.widgets
+              .sipCollapse.collapse.in(id="#{group.uuid}")
+                if group.widgets.length > 0
+                  table.table
+                    thead
                       tr
-                        td #{widget.configuration_name}
-                        td.text-center
-                          button(class="btn-#{widget.button_style}")
-                            span #{widget.button_label || defaultBtnLabel}
-                        td.text-right
-                          #[button.btn.btn-sm.btn-primary.clipboard(widget-code="#{widget.divCode}") Copy Code] #[a.btn.btn-sm.btn-info(href="/widget/#{widget._id}/edit") View / Edit]
+                        td(width="25%") Configuration Name
+                        td.text-center(width="55%") Button Preview
+                        td.text-right Actions
+                    tbody
+                      - each widget in group.widgets
+                        tr
+                          td #{widget.configuration_name}
+                          td.text-center
+                            button(class="btn-#{widget.button_style}")
+                              span #{widget.button_label || defaultBtnLabel}
+                          td.text-right
+                            #[button.btn.btn-sm.btn-primary.clipboard(widget-code="#{widget.divCode}") Copy Code] #[a.btn.btn-sm.btn-info(href="/widget/#{widget._id}/edit") View / Edit]
 
     include contact-voxbone
     include ../sip/edit_modal
