[MISC] small CSS fix

--- a/public/stylesheets/less/vxb-widget.less
+++ b/public/stylesheets/less/vxb-widget.less
@@ -45,6 +45,7 @@
         padding-left:10px;
         font-size:16px;
         font-weight:700;
+        text-align:left;
       }
       .vw-animated-dots {
         color:#1671ad;
