--- a/views/layout.jade
+++ b/views/layout.jade
@@ -19,9 +19,7 @@ html(lang='en')
     link(href="//cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.css", rel="stylesheet")
 
     script(src="//cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js" async)
-    //- script(src="/javascripts/jssip-0.7.9.min-vox.js")
-    //- script(src="/javascripts/voxbone-0.0.5.js")
-    script(src="/voxbone/dist/voxbone-2.0.0-a.min.js")
+    script(src="//cdn.voxbone.com/voxbone/voxbone-2.1.0.min.js")
 
     //- load requirejs and its config
     script(src="/lib/requirejs/require.js")
