--- a/public/stylesheets/less/vxb-widget.less
+++ b/public/stylesheets/less/vxb-widget.less
@@ -105,6 +105,7 @@
     float:left;
     height:40px;
     a {
+      text-decoration:none;
       position:relative;
       background:#9b9b9b;
       float:left;
