--- a/views/widget/edit.jade
+++ b/views/widget/edit.jade
@@ -41,7 +41,7 @@ block content
 
             #alert-success.alert.alert-success(style="display: none;")
 
-    .body(ng-controller="EditWidgetController" ng-init="initData={widget: #{JSON.stringify(widget)}, did: #{user.did}, widgetCode: '#{widget_code}', currentSip: '#{widget.sip_uri}'}")
+    .body(ng-controller="EditWidgetController" ng-init="initData={widget: #{JSON.stringify(widget)}, did: #{widget.didToCall()}, widgetCode: '#{widget_code}', currentSip: '#{widget.sip_uri}'}")
       .container
         .row
           .col-md-6.left-col
@@ -146,7 +146,7 @@ block content
                   .togle-bg-tooltip
                     #[span.badge(ng-show="preview_webrtc_compatible" data-toggle='tooltip' data-placement="left" data-html="true" data-width="350" title="You can click the button to make a call and test the service!<br>(once you setup your widget)") ?]
                   .widget-box#launch_call_div(ng-class="widget.button_style" ng-show="showCallButton()")
-                    button.btn-style.launch_call#launch_call(ng-cloak ng-disabled="!widget.sip_uri" ng-click="makeCall(#{currentUser.did})" qtip="You can click the button to make a call and test the service!<br>(save your configuration before you test)" qtip-visible="true" qtip-title="Try it!" qtip-disable="!preview_webrtc_compatible") #[span {{widget.button_label || 'Call Sales'}}]
+                    button.btn-style.launch_call#launch_call(ng-cloak ng-disabled="!widget.sip_uri" ng-click="makeCall()" qtip="You can click the button to make a call and test the service!<br>(save your configuration before you test)" qtip-visible="true" qtip-title="Try it!" qtip-disable="!preview_webrtc_compatible") #[span {{widget.button_label || 'Call Sales'}}]
                     .widget-footer-left
                       a(href="https://test.webrtc.org/" target="_blank") Test your setup
                     .widget-footer-right
