--- a/views/widget/demo.jade
+++ b/views/widget/demo.jade
@@ -134,7 +134,7 @@ block content
                   .togle-bg-tooltip
                     #[span.badge(ng-show="showCallButton()" data-toggle='tooltip' data-placement="left" data-html="true" data-width="350" title="You can click the button to make a call and test the service!<br>(once you setup your widget)") ?]
                   .widget-box#launch_call_div(ng-class="widget.button_style" ng-show="showCallButton()")
-                    button.btn-style.launch_call#launch_call(ng-cloak ng-disabled="!widget.sip_uri" ng-click="makeCall(#{demoUser.did})" qtip="You can click the button to make a call and test the service!<br>(once you select a SIP URI)" qtip-visible='true') #[span {{widget.button_label || 'Call Sales'}}]
+                    button.btn-style.launch_call#launch_call(ng-cloak ng-disabled="!widget.sip_uri" ng-click="makeCall(#{demoUser.did})" qtip="You can click the button to make a call and test the service!<br>(once you select a SIP URI)" qtip-disable="!isWebRTCSupported() || !preview_webrtc_compatible") #[span {{widget.button_label || 'Call Sales'}}]
                     .widget-footer-left
                       a(href="https://test.webrtc.org/" target="_blank") Test your setup
                     .widget-footer-right
