[#311] Test to make sure that routes respond correctly (#349)
* [#311] Test to make sure that routes respond correctly

* [#311] Dummy readme update to prevent errors

--- a/views/error.jade
+++ b/views/error.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
 
-  .main.registerPage
+  .main.registerPage.errorPageRaised
     .row
       .col-xs-12
         #tokenError.alert.alert-danger
