--- a/public/stylesheets/less/custom.less
+++ b/public/stylesheets/less/custom.less
@@ -50,6 +50,22 @@ pre {
   text-shadow: 1px 1px 0 rgba(255,255,255,1);
 }
 
+.dropdown-menu {
+  text-align: center;
+  background-color: transparent;
+  border: 0;
+  padding: 0px;
+  margin: 0px;
+  box-shadow: 0 0 0 transparent;
+  -webkit-box-shadow: 0 0 0 transparent;
+  width: 100%;
+}
+
+.gravatar {
+  height: 20px;
+  width: 20px;
+}
+
 .user-pill {
   margin-right: 5px;
 }
