--- a/views/account/edit.jade
+++ b/views/account/edit.jade
@@ -2,50 +2,17 @@ extends ../layout
 
 block extra_head
   script.
-    require(['angular', 'jquery'], function (angular, jQuery) {
-      var app = angular.module('voxboneApp', []);
-
-      app.controller('formController', ['$scope', '$http', '$window', function ($scope, $http, $window) {
-        $scope.account = {
-          email: '#{currentUser.email}',
-          name: '#{currentUser.first_name}',
-          company: '#{currentUser.company}'
-        };
-
-        $scope.showAlert = function (type, message) {
-          jQuery('#alert')
-            .html(message)
-            .addClass('alert-' + type)
-            .css('display', 'block');
-        };
-
-        $scope.saveProfile = function (account) {
-          console.log('Saving profile...');
-
-          var req = {
-            method: 'POST',
-            url: '/account/edit',
-            headers: {
-              'Content-Type': 'application/json; charset=utf-8'
-            },
-            data: account
-          };
-
-          $http(req).then(
-            function successCallback (response) {
-              $scope.showAlert('success', 'Your profile has been saved succesfully');
-            }, function errorCallback (response) {
-              $scope.showAlert('danger', response.data.message);
-            });
-        };
-      }]);
-
-      angular.bootstrap(document, ['voxboneApp']);
-    });
+    require(
+      ['angular', 'controllers/edit', 'jquery', 'bootstrap'],
+      function (angular, EditController, $) {
+        angular.module('voxboneApp', [])
+          .controller('EditController', EditController);
+        angular.bootstrap(document, ['voxboneApp']);
+      });
 
 block content
   .main.registerPage
-    .body
+    .body(ng-controller="EditController" ng-init="initData={account: #{JSON.stringify(currentUser)}}")
       .container
         .row
           .col-sm-12
@@ -57,10 +24,10 @@ block content
               p You can change your personal information and settings here.
 
               .formWrap
-                form#editProfile(name="editProfile" novalidate ng-controller="formController")
+                form#editProfile(name="editProfile" novalidate)
                   .form-group
                     label.control-label Name
-                    input.form-control(type="text" id="name" name="name" ng-model="account.name" required)
+                    input.form-control(type="text" id="first_name" name="first_name" ng-model="account.first_name" required)
                     .error-label(ng-show="editProfile.$submitted || editProfile.name.$touched")
                       div.ng-hide(ng-show="editProfile.name.$error.required") Please enter your name
                   .form-group
