--- a/views/home.jade
+++ b/views/home.jade
@@ -13,26 +13,9 @@ html(lang='en')
     link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", rel="stylesheet")
     link(href="/stylesheets/root.css", rel="stylesheet")
 
-    if process.env.GOOGLE_ANALYTICS_ID
-      script.
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    include tracking-scripts/google
+    include tracking-scripts/hotjar
 
-        ga('create', '#{process.env.GOOGLE_ANALYTICS_ID}', 'auto');
-        ga('send', 'pageview');
-
-    if process.env.HOTJAR_ID
-      script.
-        (function(h,o,t,j,a,r){
-          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-          h._hjSettings={hjid:#{process.env.HOTJAR_ID},hjsv:5};
-          a=o.getElementsByTagName('head')[0];
-          r=o.createElement('script');r.async=1;
-          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-          a.appendChild(r);})
-          (window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
   body
     .landing-hero
       .container
