--- a/views/layout.jade
+++ b/views/layout.jade
@@ -25,26 +25,8 @@ html(lang='en')
     script(src="/lib/requirejs/require.js")
     script(src="/config.js")
 
-    if process.env.GOOGLE_ANALYTICS_ID
-      script.
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', '#{process.env.GOOGLE_ANALYTICS_ID}', 'auto');
-        ga('send', 'pageview');
-
-    if process.env.HOTJAR_ID
-      script.
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:#{process.env.HOTJAR_ID},hjsv:5};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-            a.appendChild(r);
-        })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+    include tracking-scripts/google
+    include tracking-scripts/hotjar
 
     block extra_head
 
@@ -58,8 +40,13 @@ html(lang='en')
           if authenticated
             a.login.pull-left.user-pill(href="/") Home
             a.login.pull-left.user-pill(href="/account/widgets") Buttons
-            a.login.pull-left.user-pill(href="/account/edit") Profile
-            a.login.withripple.pull-left(href="/logout") Logout
+            .btn-group
+              a.login.dropdown-toggle(type="button" data-toggle="dropdown") #{currentUser.email}
+                img.gravatar(src="#{currentUser.gravatar}" alt="user_gravatar")
+                span.caret
+              ul.dropdown-menu.text-center(role="menu")
+                a.login(href="/account/edit") Profile
+                a.login(href="/logout") Logout
           else
             block default_nav
               a.login.user-pill.pull-left(href="/login") Login
