[#348] Show text not saved on initial save fix. Also some tests (#357)

--- a/views/widget/edit.jade
+++ b/views/widget/edit.jade
@@ -11,7 +11,7 @@ block content
       'jquery',
       'controllers/widget.edit',
       'directives/qtip',
-      'directives/http.prefix',
+      'directives/http.prefix'
     ],
     function(
       angular, ngSanitize, $,
