[#310] Adding 3rd party auth (#318)
* [#310] Adding Google Oauth2 Authentication

* [#310] Removing not needed piece of code

* [#310] Adding Github Oauth2 Authentication

* [#310] Adding WindowsLive Oauth2 Authentication

* [#310] Adding Slack Oauth2 Authentication

* [#310] Adding some styling

* [#310] Adding LinkedIn Oauth2 Authentication

* [#310] Tides up some config

* [MISC] Updating README.md

* [#310] Redirects to SIP wizard after logging for user without a own SIP

* [MISC] Fixing path for font-awesome

* [#310] Getting rid of slack since needs team permissions

* [#310] Catching errors on retrieving emails from the oauth providers

* [#310] Fixing/Improving tests

--- a/public/stylesheets/less/registerPage.less
+++ b/public/stylesheets/less/registerPage.less
@@ -31,5 +31,13 @@
     .login-note{
       padding-top: 15px
     }
+    .social-buttons {
+      text-align: center;
+      padding-bottom: 20px;
+      a {
+        font-size: 24px;
+        border-color: white;
+      }
+    }
   }
 }
