[#238] Add a Delete Button in widget list screen (#370)
* [#238] Add a Delete Button in widget list screen

* [#238] Trying to fix race condition between requirejs and angular.bootstrap

--- a/public/stylesheets/less/custom.less
+++ b/public/stylesheets/less/custom.less
@@ -133,3 +133,12 @@ pre {
     min-height: 120px !important;
   }
 }
+
+
+.modal#deleteWidgetModal{
+  top: 220px;
+
+  .modal-body {
+    min-height: 120px !important;
+  }
+}
