--- a/views/account/widgets.jade
+++ b/views/account/widgets.jade
@@ -3,24 +3,31 @@ extends ../layout
 block extra_head
   script.
     require([
+      'domReady',
       'angular',
       'jquery',
       'controllers/widget.list',
-      'controllers/sip.edit',
+      'controllers/widget.delete',
+      'controllers/sip.edit'
     ],
-    function(angular, $, WidgetListController, EditSIPController) {
+    function(domReady, angular, $, WidgetListController, DeleteWidgetController, EditSIPController) {
+      //- adding a new require call to load other
+      //- controllers after main one loads
       angular.module('voxboneApp', [])
         .controller('WidgetListController', WidgetListController)
-        .controller('EditSIPController', EditSIPController);
+        .controller('EditSIPController', EditSIPController)
+        .controller('DeleteWidgetController', DeleteWidgetController);
 
-      angular.bootstrap(document, ['voxboneApp']);
+      domReady(function() {
+        angular.bootstrap(document, ['voxboneApp']);
+      });
 
-      $(document).on('hide.bs.collapse show.bs.collapse', '.sipCollapse', function () {
+      $(document).on('hide.bs.collapse show.bs.collapse', '.sipCollapse', function() {
         var trigger = $('[data-toggle="collapse"][href="#' + $(this).attr('id') + '"]');
         trigger.find('i').toggleClass('glyphicon-chevron-down glyphicon-chevron-right');
       });
 
-      $(document).on('click', '#callVoxbone', function () {
+      $(document).on('click', '#callVoxbone', function() {
         $('.call-to-voxbone-button .vxb-widget-box #launch_call')[0].click();
       });
     });
@@ -60,7 +67,7 @@ block content
                     thead
                       tr
                         td(width="25%") Configuration Name
-                        td.text-center(width="55%") Button Preview
+                        td.text-center(width="45%") Button Preview
                         td.text-right Actions
                     tbody
                       - each widget in group.widgets
@@ -70,7 +77,8 @@ block content
                             button(class="btn-#{widget.button_style}")
                               span #{widget.button_label || defaultBtnLabel}
                           td.text-right
-                            #[button.btn.btn-sm.btn-primary.clipboard(widget-code="#{widget.divCode}") Copy Code] #[a.btn.btn-sm.btn-info(href="/widget/#{widget._id}/edit") View / Edit]
+                            #[button.btn.btn-sm.btn-primary.clipboard(widget-code="#{widget.divCode}") Copy Code] #[a.btn.btn-sm.btn-info(href="/widget/#{widget._id}/edit") View / Edit] #[button.deleteButton.btn.btn-sm.btn-warning(ng-click='openDeleteModal("#{widget._id}")') Delete]
 
     include contact-voxbone
     include ../sip/edit_modal
+    include ../widget/delete_modal
